--- a/index.html
+++ b/index.html
@@ -109,7 +109,15 @@
 		})
 	</script>
 <!--===============================================================================================-->
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-H2NKJJ37V3"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-H2NKJJ37V3');
+</script>
 <script src="js/main.js"></script>
 
 </body>
