--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	  gtag('config', 'G-H2NKJJ37V3');
 	</script>
-	<title>LEPSES - Coming Soon</title>
+	<title>LEPSES - The Learning Ecosystem</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta name="title" content="LEPSES - Coming Soon"/>
